Fix animation issue on safari

--- a/css/home.css
+++ b/css/home.css
@@ -71,7 +71,7 @@
 .bg2-title-1 {
     position: fixed;
     top: 100%;
-    z-index: 1;
+    z-index: 2;
     width: 26.1875em;
     min-width: 314px;
 }
